src/objects/LG_DWHFeedStagingTable__c.object
<CustomObject>
    <fields>
        <fullName>LG_AccountAddressSearchText__c</fullName>
        <label>Account Address Search Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountChamberOfCommerceNumber__c</fullName>
        <label>Account Chamber of Commerce Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountCommerciallyActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Commercially Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_AccountCompetitorContractEndDate__c</fullName>
        <label>Account Competitor Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_AccountCompetitorName__c</fullName>
        <label>Account Competitor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountCompetitorProduct__c</fullName>
        <label>Account Competitor Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountCreditRisk__c</fullName>
        <label>Account Credit Risk</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountDateofEstablishment__c</fullName>
        <label>Account Date of Establishment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_AccountDetailedIndustry__c</fullName>
        <label>Account Detailed Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountEconomicallyActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Economically Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_AccountExternalId__c</fullName>
        <label>Account ExternalId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountFootprint__c</fullName>
        <label>Account Footprint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountId__c</fullName>
        <label>Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountIndustry__c</fullName>
        <label>Account Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountInternetCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Internet Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_AccountLastBilledPrice__c</fullName>
        <label>Account Last Billed Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_AccountLegalForm__c</fullName>
        <label>Account Legal Form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountMobileCompContEndDate__c</fullName>
        <label>Account Mobile Comp Cont End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_AccountMobileCompetitorName__c</fullName>
        <label>Account Mobile Competitor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountMobileCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Mobile Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_AccountName__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountNumberofDesktops__c</fullName>
        <label>Account Number of Desktops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_AccountNumberofEmployees__c</fullName>
        <label>Account Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_AccountNumberofLaptops__c</fullName>
        <label>Account Number of Laptops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_AccountOwnerId__c</fullName>
        <label>Account OwnerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountParentId__c</fullName>
        <label>Account ParentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountPhone__c</fullName>
        <label>Account Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountPrimaryLocation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Primary Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_AccountReadyforService__c</fullName>
        <label>Account Ready for Service</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountReasonforRegistration__c</fullName>
        <label>Account Reason for Registration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountSalesChannel__c</fullName>
        <label>Account Sales Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountSegment__c</fullName>
        <label>Account Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountSource__c</fullName>
        <label>Account Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountTVCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account TV Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_AccountTelephonyCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Telephony Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_AccountType__c</fullName>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountVisitCity__c</fullName>
        <label>Account Visit City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountVisitCountry__c</fullName>
        <label>Account Visit Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountVisitHouseNumberExtension__c</fullName>
        <label>Account Visit House Number Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountVisitHouseNumber__c</fullName>
        <label>Account Visit House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountVisitPostalCode__c</fullName>
        <label>Account Visit Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountVisitStreet__c</fullName>
        <label>Account Visit Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AccountWebsite__c</fullName>
        <label>Account Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AttributeAreaCode__c</fullName>
        <label>Attribute Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AttributeBNumberShielding__c</fullName>
        <label>Attribute B-Number Shielding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AttributeBillingAccount__c</fullName>
        <label>Attribute Billing Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AttributeBlockType__c</fullName>
        <label>Attribute Block Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AttributeCableAccess__c</fullName>
        <label>Attribute Cable Access</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AttributeCallBarringLevel__c</fullName>
        <label>Attribute Call Barring Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AttributeCallerID__c</fullName>
        <label>Attribute Caller ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AttributeContractTerm__c</fullName>
        <label>Attribute Contract Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_AttributeDiscount__c</fullName>
        <label>Attribute Discount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AttributeIPAddressExtension__c</fullName>
        <label>Attribute IP Address Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AttributeInstallationType__c</fullName>
        <label>Attribute Installation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AttributeInternetSecurity__c</fullName>
        <label>Attribute Internet Security</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_AttributeMultiWifiType__c</fullName>
        <label>Attribute Multi Wifi Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AttributeOneOffCharge__c</fullName>
        <label>Attribute One Off Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_AttributePhoneNumbers__c</fullName>
        <label>Attribute Phone Numbers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AttributePinType__c</fullName>
        <label>Attribute Pin Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AttributeProductCategory__c</fullName>
        <label>Attribute Product Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AttributeProductName__c</fullName>
        <label>Attribute Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AttributeQuantity__c</fullName>
        <label>Attribute Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_AttributeRecurringCharge__c</fullName>
        <label>Attribute Recurring Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_AttributeSLA__c</fullName>
        <label>Attribute SLA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AttributeServiceExternalId__c</fullName>
        <label>Attribute Service External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AttributeTelephonieType__c</fullName>
        <label>Attribute Telephonie Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_AttributeTypeOfPhoneRange__c</fullName>
        <label>Attribute Type Of Phone Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountBankAccountHolder__c</fullName>
        <label>BillingAccount Bank Account Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountBillFormat__c</fullName>
        <label>BillingAccount BillFormat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountBillingChannel__c</fullName>
        <label>BillingAccount Billing Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountBillingCity__c</fullName>
        <label>BillingAccount Billing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountBillingCountry__c</fullName>
        <label>BillingAccount Billing Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountBillingEmailAddress__c</fullName>
        <label>BillingAccount Billing Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountBillingHouseNumberExt__c</fullName>
        <label>BillingAccount Billing House Number Ext</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountBillingHouseNumber__c</fullName>
        <label>BillingAccount Billing House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountBillingLanguage__c</fullName>
        <label>BillingAccount Billing Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountBillingPostcode__c</fullName>
        <label>BillingAccount Billing Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountBillingStreet__c</fullName>
        <label>BillingAccount Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountCustomerReference__c</fullName>
        <label>BillingAccount Customer Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BillingAccount Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountDeliveryMethod__c</fullName>
        <label>BillingAccount Delivery Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountDirectDebitMandate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BillingAccount Direct Debit Mandate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountExternalId__c</fullName>
        <label>BillingAccount ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountIBAN__c</fullName>
        <label>BillingAccount IBAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountMandateEndDate__c</fullName>
        <label>BillingAccount Mandate End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountMandateStartDate__c</fullName>
        <label>BillingAccount Mandate Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountName__c</fullName>
        <label>BillingAccount Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountPaymentTerms__c</fullName>
        <label>BillingAccount Payment Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountPaymentType__c</fullName>
        <label>BillingAccount Payment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountStatus__c</fullName>
        <label>BillingAccount Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContactCity__c</fullName>
        <label>Contact City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContactCountryCode__c</fullName>
        <label>Contact Country Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContactCountry__c</fullName>
        <label>Contact Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContactEmailOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact EmailOptOut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_ContactEmail__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LG_ContactExternalID__c</fullName>
        <label>Contact ExternalID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContactFaxOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact FaxOptOut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_ContactFax__c</fullName>
        <label>Contact Fax</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContactFirstName__c</fullName>
        <label>Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContactIsDecisionMaker__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact IsDecisionMaker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_ContactLastInteractionDate__c</fullName>
        <label>Contact Last Interaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_ContactLastInteractionTopic__c</fullName>
        <label>Contact Last Interaction Topic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContactLastName__c</fullName>
        <label>Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContactMobileOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact MobileOptOut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_ContactMobilePhone__c</fullName>
        <label>Contact Mobile Phone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContactOwnerId__c</fullName>
        <label>Contact OwnerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContactPhoneOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact PhoneOptOut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_ContactPhone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LG_ContactPostOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact PostOptOut</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_ContactPostalCode__c</fullName>
        <label>Contact PostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContactPreferredCommunication__c</fullName>
        <label>Contact Preferred Communication</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContactReportsTo__c</fullName>
        <label>Contact ReportsTo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContactRole__c</fullName>
        <label>Contact Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContactSalutation__c</fullName>
        <label>Contact Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContactStateCode__c</fullName>
        <label>Contact State Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContactState__c</fullName>
        <label>Contact State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContactStreet__c</fullName>
        <label>Contact Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContactTitle__c</fullName>
        <label>Contact Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContractEndDate__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_ContractExpirationDate__c</fullName>
        <label>Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_ContractNumber__c</fullName>
        <label>Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ContractStartDate__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_ContractStatus__c</fullName>
        <label>Contract Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_DWHTransactionId__c</fullName>
        <label>DWH TransactionId</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ErrorDate__c</fullName>
        <label>Error Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LG_ErrorMessage__c</fullName>
        <label>Error Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LG_PremiseCity__c</fullName>
        <label>Premise City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PremiseCountry__c</fullName>
        <label>Premise Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PremiseExternalId__c</fullName>
        <label>Premise ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PremiseFootprint__c</fullName>
        <label>Premise Footprint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PremiseHouseNumberExtension__c</fullName>
        <label>Premise House Number Extension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PremiseHouseNumber__c</fullName>
        <label>Premise House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PremiseName__c</fullName>
        <label>Premise Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PremisePostalCode__c</fullName>
        <label>Premise Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PremiseStateProvince__c</fullName>
        <label>Premise State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PremiseStreet__c</fullName>
        <label>Premise Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_PremiseTechnicalContact__c</fullName>
        <label>Premise Technical Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ProcessedDate__c</fullName>
        <label>Processed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LG_ServiceContractTerm__c</fullName>
        <label>Service Contract Term</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_ServiceExternalId__c</fullName>
        <label>Service ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ServiceLineItemBillingAccountId__c</fullName>
        <label>Service Line Item Billing AccountId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ServiceLineItemExternalId__c</fullName>
        <label>Service Line Item ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ServiceLineItemName__c</fullName>
        <label>Service Line Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ServiceName__c</fullName>
        <label>Service Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ServiceNewDatafromDWH__c</fullName>
        <label>Service New Data from DWH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ServiceNumber__c</fullName>
        <label>Service Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ServicePremiseId__c</fullName>
        <label>Service PremiseId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ServiceQuantity__c</fullName>
        <label>Service Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_ServiceStatus__c</fullName>
        <label>Service Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ServiceSubscriptionExternalId__c</fullName>
        <label>Service Subscription ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ServiceTotalPrice__c</fullName>
        <label>Service Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_ServiceUnitPrice__c</fullName>
        <label>Service Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Processed Successfully</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_SubscriptionContractNumber__c</fullName>
        <label>Subscription Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_SubscriptionExternalId__c</fullName>
        <label>Subscription ExternalId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_SubscriptionName__c</fullName>
        <label>Subscription Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_SubscriptionNewDatafromDWH__c</fullName>
        <label>Subscription New Data from DWH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_SubscriptionNumber__c</fullName>
        <label>Subscription Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_SubscriptionStatus__c</fullName>
        <label>Subscription Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_SubscriptionTerminationDate__c</fullName>
        <label>Subscription Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_TransactionIdAccountId__c</fullName>
        <formula>LG_DWHTransactionId__c  &amp; LG_AccountExternalId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TransactionIdAccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_TypeofRecord__c</fullName>
        <label>Type of Record</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Subscription</fullName>
                </value>
                <value>
                    <fullName>Attribute</fullName>
                </value>
                <value>
                    <fullName>Billing Account</fullName>
                </value>
                <value>
                    <fullName>Premise</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>DWH Feed Staging Table</label>
    <listViews>
        <fullName>Account_111_Connect_MKB_Pin_MultiWifi</fullName>
        <columns>NAME</columns>
        <columns>LG_TypeofRecord__c</columns>
        <columns>LG_SubscriptionName__c</columns>
        <columns>LG_ServiceName__c</columns>
        <columns>LG_AttributeProductName__c</columns>
        <columns>LG_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LG_AccountExternalId__c</field>
            <operation>equals</operation>
            <value>111</value>
        </filters>
        <label>Account 111 Connect MKB+Pin+MultiWifi</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Account_11_Connect_MKB_only</fullName>
        <columns>NAME</columns>
        <columns>LG_TypeofRecord__c</columns>
        <columns>LG_SubscriptionName__c</columns>
        <columns>LG_ServiceName__c</columns>
        <columns>LG_AttributeProductName__c</columns>
        <columns>LG_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LG_AccountExternalId__c</field>
            <operation>equals</operation>
            <value>11</value>
        </filters>
        <label>Account 11 Connect MKB only</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Account_1_Connect_MKB_Pin</fullName>
        <columns>NAME</columns>
        <columns>LG_TypeofRecord__c</columns>
        <columns>LG_SubscriptionName__c</columns>
        <columns>LG_ServiceName__c</columns>
        <columns>LG_AttributeProductName__c</columns>
        <columns>LG_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LG_AccountExternalId__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Account 1 Connect MKB+Pin</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Account_22_Telephony_only</fullName>
        <columns>NAME</columns>
        <columns>LG_TypeofRecord__c</columns>
        <columns>LG_SubscriptionName__c</columns>
        <columns>LG_ServiceName__c</columns>
        <columns>LG_AttributeProductName__c</columns>
        <columns>LG_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LG_AccountExternalId__c</field>
            <operation>equals</operation>
            <value>22</value>
        </filters>
        <label>Account 22 Telephony only</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Account_2_Telephony_phone_New</fullName>
        <columns>NAME</columns>
        <columns>LG_TypeofRecord__c</columns>
        <columns>LG_SubscriptionName__c</columns>
        <columns>LG_ServiceName__c</columns>
        <columns>LG_AttributeProductName__c</columns>
        <columns>LG_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LG_AccountExternalId__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filters>
        <label>Account 2 Telephony+phone (New)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Account_3_Multi_Wifi_Access_Point</fullName>
        <columns>NAME</columns>
        <columns>LG_TypeofRecord__c</columns>
        <columns>LG_SubscriptionName__c</columns>
        <columns>LG_ServiceName__c</columns>
        <columns>LG_AttributeProductName__c</columns>
        <columns>LG_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LG_AccountExternalId__c</field>
            <operation>equals</operation>
            <value>3</value>
        </filters>
        <label>Account 3 Multi Wifi+Access Point</label>
        <language>en_US</language>
    </listViews>
</CustomObject>